# ML4MSD-Project-BrennanB

./: 2d_materials_1.csv  oqmd_2d_band_gap_features.csv  pyproject.toml
Project/: Test
Project-Final/: Projectcode.py
oqmd-ml/: main.py  pyproject.toml
