[project]
name = "ml4msd-teacher"
version = "0.1.0"
description = "Repository for ML4MSD Course"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pymatgen>=2025.6.14",
    "scikit-learn>=1.5.0",
    "dscribe>=2.1.0",
    "requests>=2.32.0",
]

[tool.uv.workspace]
members = [
    "oqmd-ml",
]
