[project]
name = "oqmd-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "ase>=3.26.0",
    "dscribe>=2.1.2",
    "matplotlib>=3.10.6",
    "numpy>=2.3.2",
    "pandas>=2.3.2",
    "pymatgen>=2025.6.14",
    "qmpy-rester>=0.2.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "xgboost>=3.0.5",
]
